# fabric-sample-pypackage

./: .env.example  .gitignore  LICENSE  README.md  README_ONELAKE_SERVICE_PRINCIPAL.md  example.py  pyproject.toml  requirements.txt  setup.py  test_onelake_sp.py
Data/: invoice_notes.txt  shipment_update.txt
Data/download/: outbox_copied_customer_profile.txt
sample_fabric/: __init__.py  core.py  main.py  onelake_io.py
